--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,12 @@
 			<version>3.1.11</version>
 		</dependency>
 
+		<!--jaxrs转json工具-->
+		<dependency>
+			<groupId>com.fasterxml.jackson.jaxrs</groupId>
+			<artifactId>jackson-jaxrs-json-provider</artifactId>
+			<version>2.8.5</version>
+		</dependency>
 	</dependencies>
 
 	<build>
